[package]
name = "dota_smash"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.0"
image = "0.24.3"
winit = "0.26.1"
iyes_loopless = "0.7.0"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render" ] }
bevy_prototype_lyon = "*"
ggrs = "0.9.2"
bevy_ggrs = "0.10.0"
matchbox_socket = { version = "0.3", features = ["ggrs-socket"] }
bytemuck = "*"