[package]
name = "native-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
dota_smash = { package = "dota_smash", path = "../.." }
bevy = "0.8"
image = "0.24.3"
winit = "0.26.1"
iyes_loopless = "0.7.0"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render" ] }