[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
dota_smash = { package = "dota_smash", path = "../.." }
bevy = "0.8"
web-sys = { version="0.3.59", features=["Document", "Window"] }
yew = "0.19.3"
stylist = { version= "0.10.1", features=["yew_integration"] }
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render" ] }
ggrs = "0.9.2"
bevy_ggrs = "0.10.0"
matchbox_socket = { version = "0.3", features = ["ggrs-socket"] }
